# hermes-computer-use

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  README.zh.md  SECURITY.md  computer_use_mcp.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
config/: .env.example  hermes.yaml.example  hermes.yaml.snippet
docs/: ARCHITECTURE.md  CAPTCHA.md  FAQ.md  LLM_SETUP_PROMPT.md  TROUBLESHOOTING.md  WSL_SETUP.md
examples/: demo_prompts.md  smoke_mcp.py  smoke_test.py
scripts/: display.sh  install-novnc.sh  record-demo.sh  setup.sh  uninstall.sh
src/hermes_computer_use/: __init__.py  __main__.py  dom.py  server.py
systemd/: computer-use.service  computer-use.service.example  novnc.service  novnc.service.example
tests/: test_import.py  test_key_normalize.py
