[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "hermes-computer-use"
version = "0.1.0"
description = "Pixel-level browser automation MCP server — drive a real Chrome browser with screenshot + xdotool, no CDP."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Geunuk Song", email = "geunuk05@gmail.com" }]
keywords = [
    "mcp",
    "computer-use",
    "browser-automation",
    "xdotool",
    "xvfb",
    "agent",
    "hermes-agent",
    "anti-bot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "mcp>=1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
novnc = ["websockify>=0.11"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
hermes-computer-use = "hermes_computer_use.server:main"

[project.urls]
Homepage = "https://github.com/Noah3521/hermes-computer-use"
Repository = "https://github.com/Noah3521/hermes-computer-use"
Issues = "https://github.com/Noah3521/hermes-computer-use/issues"
Documentation = "https://github.com/Noah3521/hermes-computer-use#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_computer_use"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # long lines — docstrings are intentionally wide

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
